<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/screen_bg">

    <include layout="@layout/actionbar_toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/character_item_margin"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/screen_bg"
        app:cardCornerRadius="20dp"
        app:contentPadding="@dimen/character_item_radius">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.25" />

                    <TextView
                        android:id="@+id/tv_name_label"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_name_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        tools:text=""
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:id="@+id/tv_yob_label"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/year_of_birth"
                        app:layout_constraintStart_toStartOf="@id/tv_name_label"
                        app:layout_constraintTop_toBottomOf="@id/tv_name"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_yob"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_yob_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        tools:text=""
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:id="@+id/tv_height_label"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/height"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="@id/tv_name_label"
                        app:layout_constraintTop_toBottomOf="@id/tv_yob"
                        tools:visibility="visible"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_height"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_height_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        tools:text=""
                        tools:visibility="visible"
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:id="@+id/tv_height_feet"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/tv_height"
                        tools:text=""
                        tools:visibility="visible"
                        android:textColor="@color/text_color"/>


                    <TextView
                        android:id="@+id/tv_species_label"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/species"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="@id/tv_name_label"
                        app:layout_constraintTop_toBottomOf="@id/tv_height_feet"
                        tools:visibility="visible"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:id="@+id/ll_species_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tv_species_label"
                        tools:background="@color/screen_bg"
                        tools:layout_height="30dp"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_films_label"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/films"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="@id/tv_name_label"
                        app:layout_constraintTop_toBottomOf="@id/ll_species_details"
                        tools:visibility="visible"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:id="@+id/ll_films"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tv_films_label"
                        tools:background="@color/screen_bg"
                        tools:layout_height="30dp"
                        tools:visibility="visible" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>